--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/kjsf/project_0/issues"
   },
-  "homepage": "https://github.com/kjsf/project_0#readme"
+  "homepage": "https://github.com/kjsf/project_0#readme",
+  "dependencies": {
+    "ejs": "^3.1.5",
+    "express": "^4.17.1",
+    "helmet": "^4.1.1",
+    "morgan": "^1.10.0",
+    "passport": "^0.4.1"
+  }
 }
