--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "itemReceiptConfirmation",
   "version": "1.0.0",
   "description": "Item Receipt Confimation",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app"
   },
   "repository": {
     "type": "git",
@@ -18,9 +19,11 @@
   },
   "homepage": "https://github.com/kjsf/project_0#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "helmet": "^4.1.1",
+    "mongoose": "^5.10.9",
     "morgan": "^1.10.0",
     "passport": "^0.4.1"
   }
