--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app"
+    "start": "node app",
+    "dev": "nodemon app"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kjsf/project_0.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "kez",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/kjsf/project_0/issues"
