--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1"
+  },
+  "engines": {
+    "node": "12.18.3"
   }
 }
