--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "passport-local-mongoose": "^6.0.1"
   },
   "engines": {
-    "node": "12.18.3"
+    "node": "12.18.3",
+    "npm": "6.14.8"
   }
 }
